# IllRecNet

./: .gitignore  01_LOLv1_train.py  02_LOLv2real_train.py  03_LOLv2synthetic_train.py  AGENTS.md  README.md  bench.py  infer.py  pyproject.toml  repro.sh  requirements.txt  train.py  valid.py
.gemini/rules/: wiki-optimizer.md
.gemini/tmp/: lint.js
.github/: copilot-instructions.md
.wiki/: index.md  log.md
.wiki/concept/: core-factory.md  data-module.md  engine-module.md  entry-points.md  model-module.md  utils-module.md
.wiki/domain/: 01-lolv1-train.md  02-lolv2real-train.md  03-lolv2synthetic-train.md  bench.md  data-dataloader.md  data-utils.md  engine-engine.md  engine-runner.md  infer.md  model-blocks-attention.md  model-blocks-enhancer.md  model-blocks-flatten.md  model-blocks-sampling.md  model-blocks-separation.md  model-loss.md  model-model.md  utils-metrics.md  utils-utils.md  valid.md
.wiki/moc/: illrecnet-overview.md
.wiki/pattern/: lightning-pipeline.md  registry-factory.md
.wiki/rules/: docs.md
.wiki/summary/: illrecnet-architecture.md
data/: dataloader.py  utils.py
engine/: engine.py  runner.py
model/: loss.py  model.py
model/blocks/: attention.py  enhancer.py  flatten.py  homomorphic.py  sampling.py  separation.py  singlestage.py
test/: 1_test_dataset.ipynb  2_test_homomorphic.ipynb  3_test_attention.ipynb  3_test_coder.ipynb  4_test_coder.ipynb  4_test_enhancer.ipynb  5_test_singlestage.ipynb  6_test_enhancer.ipynb
utils/: metrics.py  utils.py
