[project]
name = "ILRENet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ruff>=0.13.2",
    "lightning>=2.5.2",
    "pyiqa>=0.1.14.1",
    "torch==2.7.1+cu118",
    "torchaudio==2.7.1+cu118",
    "torchinfo>=1.8.0",
    "torchvision==0.22.1+cu118",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"